--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,15 +12,15 @@ website:
     search: false
     right:
       - href: index.qmd
-        text: Home
-      - href: about.qmd
-        text: About me
+        text: About Me
+#      - href: about.qmd
+#        text: About me
       - href: my-research.qmd
         text: My research
       - href: resources.qmd
         text: Packages and resources
-      - href: talks.qmd
-        text: Talks
+#      - href: talks.qmd
+#        text: Talks
       - href: https://quinnasena.github.io/CV/resume_refs.html
         text: CV
     tools:
@@ -38,12 +38,15 @@ website:
             href: https://williamspaleolab.github.io/people/
           - text: Perry Lab
             href: https://spatialecol.com/
+  page-footer: 
+    left: "Email: qasena@wisc.edu" 
 
 format:
   html:
     theme: lux
     css: styles.css
     toc: true
-
+    link-external-icon: true
+    link-external-newwindow: true
 
 
