--- a/resources-posts/resources.yml
+++ b/resources-posts/resources.yml
@@ -70,7 +70,7 @@
   categories:
     - App
 
-- title: Population growth Shiny app
+- title: YorK Institute for Tropical Ecosystems (KITE)
   path: https://www.youtube.com/watch?v=Htp0hVD-WYM
   description: > 
     Science outreach video for the York Institute for Tropical Ecosystems. Made before a phone could make a movie!
